--- a/index.html
+++ b/index.html
@@ -221,6 +221,12 @@
         </section>       
 
     </main>
+    <footer class="footer">
+            <a class="consultas" href="#">Consultas</a>
+            <a class="clientes" href="#">Clientes</a>
+            <a class="relatorios" href="#">Relatório</a>
+            <button class="menu">Menu</button>
+    </footer>
     
 </body>
 </html>
