Add @media for min-width: 700px and 1040px

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section class="agenda">
             <section> 
                 <h2 class="agenda__day">Hoje</h2>
-                <ul>
+                <ul class="agenda__day-list">
                     <li class="agenda__card">
                         <div class="card__top">
                             <img class="card__top__photo" src="Img/perfil-2.png" alt="patient's profile photo">
