Change footer to main-menu

--- a/index.html
+++ b/index.html
@@ -218,15 +218,16 @@
                     </li>
                 </ul>
             </section>
-        </section>       
+        </section>  
+        <section class="main-menu">
+            <a class="consultas" href="#">Consultas</a>
+            <a class="clientes" href="#">Clientes</a>
+            <a class="relatorios" href="#">Relatório</a>
+            <a href="index2.html" class="menu">Menu</a>
+        </section>
 
     </main>
-    <footer class="footer">
-        <a class="consultas" href="#">Consultas</a>
-        <a class="clientes" href="#">Clientes</a>
-        <a class="relatorios" href="#">Relatório</a>
-        <a href="index2.html" class="menu">Menu</a>
-    </footer>
+    
     
 </body>
 </html>
