Give max-width from profile same as agenda

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 <body> 
     <header class="header-profile">
-        <img class="profile__picture" src="Img/perfil-1.png" alt="doctor's profile photo">
-        <div>
-            <h1 class="profile__greeting">Olá, Sônia</h1>
-            <p class="profile__text">Mais 4 consultas hoje</p>
+        <div class="profile__wrapper">
+            <img class="profile__picture" src="Img/perfil-1.png" alt="doctor's profile photo">
+            <div>
+                <h1 class="profile__greeting">Olá, Sônia</h1>
+                <p class="profile__text">Mais 4 consultas hoje</p>
+            </div>
         </div>
     </header>
     <main>
