Change the href from menu and consultas

--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@
             </section>
         </section>  
         <section class="main-menu">
-            <a class="consultas" href="#">Consultas</a>
+            <a class="consultas" href="index2.html">Consultas</a>
             <a class="clientes" href="#">Clientes</a>
             <a class="relatorios" href="#">Relatório</a>
-            <a href="index2.html" class="menu">Menu</a>
+            <a href="#" class="menu">Menu</a>
         </section>
 
     </main>
