Change classes names inside main-menu

--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
             </section>
         </section>  
         <section class="main-menu">
-            <a class="consultas" href="index2.html">Consultas</a>
-            <a class="clientes" href="#">Clientes</a>
-            <a class="relatorios" href="#">Relatório</a>
+            <a class="appointment" href="index2.html">Consultas</a>
+            <a class="clients" href="#">Clientes</a>
+            <a class="records" href="#">Relatório</a>
             <a href="#" class="menu">Menu</a>
         </section>
 
