change href from appointments to float button; bring float button to main page for phones and tablets

--- a/index.html
+++ b/index.html
@@ -222,10 +222,13 @@
             </section>
         </section>  
         <section class="main-menu">
-            <a class="appointment -float" href="index2.html">Consultas</a>
-            <!-- <div class="appointments__drop-down"> -->
-                <input type="checkbox" id="patient__name" class="patient__name">
-                <label for="patient__name"><span class="appointment -drop-down" href=>Consultas</span></label>
+            <input class="appointment-input" type="checkbox" id="appointment-input">
+            <label for="appointment-input" class="menu-btn">
+                <span class="appointment -drop-down" href=>Consultas</span>
+            </label>
+                <a class="float-btn backdrop__btns" href="index2.html">
+                    <img src="Img/more-options-with-circle.svg" alt="icon for more options">
+                </a>
 
                 <form class="patient__info">
                     <label for="patient__name">Nome do paciente</label>
@@ -248,10 +251,10 @@
                     <button class="btn-blue patient-save">Salvar</button>
 
                 </form>
-            <!-- </div> -->
-            <a class="clients" href="#">Clientes</a>
-            <a class="records" href="#">Relatório</a>
-            <a href="#" class="menu">Menu</a>
+                <!-- <end form for appointment> -->
+            <a class="menu-btn clients" href="#">Clientes</a>
+            <a class="menu-btn records" href="#">Relatório</a>
+            <a class="menu-btn menu" href="#" >Menu</a>
         </section>
 
     </main>
