--- a/index2.html
+++ b/index2.html
@@ -230,18 +230,20 @@
             
 
             <div class="menu-list__backdrop">
-                <a href="index.html" class="backdrop"></a>
+                <a href="" class="backdrop"></a>
                 <div class="backdrop__btns">
                     <div>
-                    <span>Nova consulta na casa do paciente</span>
-                    <img src="Img/pin circle.svg" alt="location icon">
+                        <span>Nova consulta na casa do paciente</span>
+                        <img src="Img/pin circle.svg" alt="location icon">
                     </div>
                     <div>
-                    <span>Nova consulta por vídeo</span>
-                    <img src="Img/camera circle.svg" alt="camera icon">
+                        <span>Nova consulta por vídeo</span>
+                        <img src="Img/camera circle.svg" alt="camera icon">
                     </div>
                     <div>
-                    <img src="Img/more-options-with-circle.svg" alt="icon for more options">
+                        <a href="index.html">
+                        <img src="Img/more-options-with-circle.svg" alt="icon for more options">
+                        </a>
                     </div>
                 </div>
             </div>
